<resources>
    <string name="app_name">SocialMedia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="social_media">social media</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">username</string>
    <string name="repeat_password">repeat password</string>
    <string name="error_input_empty">The fields must not be empty</string>
    <string name="error_incorrectly_repeated_password">The passwords do not match</string>
    <string name="error_username_too_short">The username can\'t have less than %d characters</string>
    <string name="error_username_too_long">The username can\'t have more than %d characters</string>
    <string name="error_password_too_short">The password must be at least %d digits long</string>
    <string name="error_not_a_valid_email">Please enter a valid E-Mail</string>
    <string name="success_registration">Successfully registered account</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="profile">profile</string>
    <string name="settings">settings</string>
    <string name="logout">logout</string>
    <string name="choose_image">choose image</string>
    <string name="description">description</string>
    <string name="post">post</string>
    <string name="error_no_image_chosen">Please choose an image for the post</string>
    <string name="alisamadzadeh">alisamadzadeh</string>
    <string name="liked_by_ali_and_50_others">Liked by ali and 50 others</string>
    <string name="delete_post_dialog_title">Do you want to delete that post?</string>
    <string name="delete_post_dialog_message">This action cannot be undone.</string>
    <string name="delete_post_dialog_positive">Yes</string>
    <string name="delete_post_dialog_negative">No</string>
    <string name="follow">Follow</string>
    <string name="posts">posts</string>
    <string name="no_description">No Description</string>
    <string name="unfollow">Unfollow</string>
    <string name="liked_by_dialog_title">Liked by</string>
    <string name="test_comment_text">test comment text</string>
    <string name="enter_username">enter username</string>
    <string name="comment">Comment</string>
    <string name="edit_your_profile">edit your profile</string>
    <string name="update">update</string>
    <string name="profile_updated">Profile updated</string>
</resources>